--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
   "name": "css-cube",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "watch": "webpack-dev-server --mode development --open"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Angelki/css-cube.git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "angelki",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Angelki/css-cube/issues"
-  },
-  "homepage": "https://github.com/Angelki/css-cube#readme",
+  "dependencies": {},
   "devDependencies": {
-    "gulp": "^4.0.0",
-    "pug": "^2.0.3",
-    "scss": "^0.2.4"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^0.28.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "pug-html-loader": "^1.1.5",
+    "sass-loader": "^7.0.2",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1",
+    "webpack-dev-server": "^3.1.4"
   }
 }
