--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "watch": "webpack-dev-server --mode development --open"
+    "watch": "webpack-dev-server --mode development --open",
+    "deploy": "gh-pages -d ./dist"
   },
   "author": "angelki",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
     "css-loader": "^0.28.11",
+    "gh-pages": "^2.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
